--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 0.5rem;
-  padding: 1rem 2.8rem;
+  padding: 1rem 2.75rem;
   border: none;
   border-radius: 2rem;
 }
