--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -36,4 +36,5 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  gap: 1.5rem;
 }
